tests/ui/unsized/relaxed-bounds-invalid-places.stderr
error: this relaxed bound is not permitted here
  --> $DIR/relaxed-bounds-invalid-places.rs:6:28
   |
LL | struct S1<T>(T) where (T): ?Sized;
   |                            ^^^^^^
   |
   = note: in this context, relaxed bounds are only allowed on type parameters defined on the closest item

error: this relaxed bound is not permitted here
  --> $DIR/relaxed-bounds-invalid-places.rs:8:27
   |
LL | struct S2<T>(T) where u8: ?Sized;
   |                           ^^^^^^
   |
   = note: in this context, relaxed bounds are only allowed on type parameters defined on the closest item

error: this relaxed bound is not permitted here
  --> $DIR/relaxed-bounds-invalid-places.rs:10:35
   |
LL | struct S3<T>(T) where &'static T: ?Sized;
   |                                   ^^^^^^
   |
   = note: in this context, relaxed bounds are only allowed on type parameters defined on the closest item

error: this relaxed bound is not permitted here
  --> $DIR/relaxed-bounds-invalid-places.rs:14:34
   |
LL | struct S4<T>(T) where for<'a> T: ?Trait<'a>;
   |                                  ^^^^^^^^^^
   |
   = note: in this context, relaxed bounds are only allowed on type parameters defined on the closest item

error: this relaxed bound is not permitted here
  --> $DIR/relaxed-bounds-invalid-places.rs:22:21
   |
LL |     fn f() where T: ?Sized {}
   |                     ^^^^^^
   |
   = note: in this context, relaxed bounds are only allowed on type parameters defined on the closest item

error: this relaxed bound is not permitted here
  --> $DIR/relaxed-bounds-invalid-places.rs:27:41
   |
LL | struct S6<T>(T) where T: Iterator<Item: ?Sized>;
   |                                         ^^^^^^
   |
   = note: in this context, relaxed bounds are only allowed on type parameters defined on the closest item

error: relaxed bounds are not permitted in supertrait bounds
  --> $DIR/relaxed-bounds-invalid-places.rs:29:11
   |
LL | trait Tr: ?Sized {}
   |           ^^^^^^
   |
   = note: traits are not implicitly bounded by `Sized`, so there is nothing to relax

error: relaxed bounds are not permitted in trait object types
  --> $DIR/relaxed-bounds-invalid-places.rs:33:15
   |
LL | type O0 = dyn ?Sized;
   |               ^^^^^^
   |
   = note: trait object types are not implicitly bounded by `Sized`, so there is nothing to relax

error: relaxed bounds are not permitted in trait object types
  --> $DIR/relaxed-bounds-invalid-places.rs:36:20
   |
LL | type O1 = dyn Tr + ?Sized;
   |                    ^^^^^^
   |
   = note: trait object types are not implicitly bounded by `Sized`, so there is nothing to relax

error: relaxed bounds are not permitted in trait object types
  --> $DIR/relaxed-bounds-invalid-places.rs:37:15
   |
LL | type O2 = dyn ?Sized + ?Sized + Tr;
   |               ^^^^^^
   |
   = note: trait object types are not implicitly bounded by `Sized`, so there is nothing to relax

error: relaxed bounds are not permitted in trait object types
  --> $DIR/relaxed-bounds-invalid-places.rs:37:24
   |
LL | type O2 = dyn ?Sized + ?Sized + Tr;
   |                        ^^^^^^
   |
   = note: trait object types are not implicitly bounded by `Sized`, so there is nothing to relax

error: bound modifier `?` can only be applied to `Sized`
  --> $DIR/relaxed-bounds-invalid-places.rs:14:34
   |
LL | struct S4<T>(T) where for<'a> T: ?Trait<'a>;
   |                                  ^^^^^^^^^^

error: bound modifier `?` can only be applied to `Sized`
  --> $DIR/relaxed-bounds-invalid-places.rs:18:33
   |
LL | struct S5<T>(*const T) where T: ?Trait<'static> + ?Sized;
   |                                 ^^^^^^^^^^^^^^^

error[E0224]: at least one trait is required for an object type
  --> $DIR/relaxed-bounds-invalid-places.rs:33:11
   |
LL | type O0 = dyn ?Sized;
   |           ^^^^^^^^^^

error: aborting due to 14 previous errors

For more information about this error, try `rustc --explain E0224`.
